Fixed weird spacing in css and also added style to nav

--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 body {
- padding: 0;
+  padding: 0;
 }
 
 #container {
- display: flex;
- flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .layout {
- flex: 1;
+  flex: 1;
 }
 
 .header {
- display: flex;
- background-color: #1F2937;
+  display: flex;
+  background-color: #1F2937;
 }
 
 .nav {
- text-align: right;
- font-size: 18px;
- color: #E5E7EB;
+  text-align: right;
+  font-size: 18px;
+}
+
+.nav a {
+  color: #E5E7EB;
+  text-decoration: none;
 }
 
 .logo {
- font-size: 24px;
- color: #F9FAF8;
+  font-size: 24px;
+  color: #F9FAF8;
 }
